Flickering on a Codepen canvas demo (https://codepen.io/cantelope/full/GRbjzGO )
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox128 | --- | unaffected |
firefox129 | --- | fixed |
firefox130 | --- | fixed |
firefox131 | --- | fixed |
People
(Reporter: mayankleoboy1, Assigned: sotaro)
References
(Blocks 2 open bugs, Regression, )
Details
(Keywords: regression)
Attachments
(2 files)
46.66 KB,
text/plain
|
Details | |
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
dmeehan
:
approval-mozilla-release+
|
Details | Review |
Go to https://codepen.io/cantelope/full/GRbjzGO
Once the page loads, click "GO" in the demo-apne
The demo will start
Maybe move the mouse inside the demo
AR: The whole demo flickers
ER: Not so
Repros with both gpu-canvas and d2d-canvas
Bisection:
Bug 1889275 - Prevent to call GPUVideoImage::GetAsSourceSurface() in CanvasRenderingContext2D::DrawImage() for SurfaceDescriptorD3D10 if CanvasTranslator is used r=gfx-reviewers,lsalzman
Differential Revision: https://phabricator.services.mozilla.com/D206446
Reporter | ||
Comment 1•6 months ago
|
||
Reporter | ||
Comment 2•6 months ago
|
||
Profile with graphics preset logging: https://share.firefox.dev/3LL9Gfc
Comment 3•6 months ago
|
||
Set release status flags based on info from the regressing bug 1889275
:sotaro, since you are the author of the regressor, bug 1889275, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Updated•6 months ago
|
Assignee | ||
Updated•6 months ago
|
Assignee | ||
Comment 4•6 months ago
•
|
||
I tested with PC with NVIDIA GPU and with 3 PCs with Intel GPUs with nightly. I confirmed the problem with 2 PCs with Intel GPU.
Zero copy video is enabled until early beta with AMD GPUs by Bug 1899450 and Bug 1910990 disables video rendering optimization when Zero copy video is disabled with AMD GPUs. Then it seems not affect to late beta and release with AMD GPUs.
Reporter | ||
Comment 5•6 months ago
|
||
If I set media.wmf.zero-copy-nv12-textures = False, I dont repro on Nightly.
Assignee | ||
Comment 6•6 months ago
|
||
(In reply to Mayank Bansal from comment #5)
If I set media.wmf.zero-copy-nv12-textures = False, I dont repro on Nightly.
Thank you for checking!
Assignee | ||
Comment 7•6 months ago
|
||
I tested more with Win PCs. Rendering problem happened with more PCs.
-[1] Win10 PC with Intel GPU(zero copy video): flickering happened
-[2] Win11 PC with Intel Gen12 GPU(REUSE_DECODER_DEVICE blocked by Bug 1896823): flickering happened
-[3] Win11 PC with NVIDIA GPU: flickering happened with pref media.wmf.zero-copy-nv12-textures = false
For some reason [3], the problem was solved by using the original ID3D11Texture2D instead of the ID3D11Texture2D opened with the shared handle. Then the cause of each flicker could be different.
I do not have PC with AMD GPU, I am going to get one soon.
Assignee | ||
Comment 8•6 months ago
•
|
||
Assignee | ||
Comment 9•6 months ago
|
||
Comment 10•6 months ago
|
||
Set release status flags based on info from the regressing bug 1889275
Comment 11•6 months ago
|
||
Assignee | ||
Comment 12•6 months ago
|
||
Bug 1911937 is created for re-enabling SurfaceDescriptorD3D10 fast path of CanvasRenderingContext2D::DrawImage() with remote Canvas2d.
Comment 13•6 months ago
|
||
bugherder |
Comment 14•6 months ago
|
||
The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox130
towontfix
.
For more information, please visit BugBot documentation.
Comment 15•6 months ago
|
||
Adding to Comment 14, please consider also adding a release uplift request.
We could consider including this in the planned Fx129 dot release.
Reporter | ||
Comment 16•6 months ago
•
|
||
This is fixed for me on the latest Nightly. Profile for reference: https://share.firefox.dev/3SEFDtu / https://share.firefox.dev/3LXUSKe
Assignee | ||
Comment 17•6 months ago
|
||
Comment on attachment 9417905 [details]
Bug 1911237 - Disable SurfaceDescriptorD3D10 fast path of CanvasRenderingContext2D::DrawImage() with remote Canvas2d
Beta/Release Uplift Approval Request
- User impact if declined: The flickering happens with STR of Bug 1911237 with Intel GPUs, NVIDIA GPUs and AMD GPUs.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This change is a fallback to an older, slower implementation that has been in use for a long time.
- String changes made/needed: no
- Is Android affected?: No
Comment 18•6 months ago
|
||
Comment on attachment 9417905 [details]
Bug 1911237 - Disable SurfaceDescriptorD3D10 fast path of CanvasRenderingContext2D::DrawImage() with remote Canvas2d
Approved for 130.0b3
Comment 19•6 months ago
|
||
uplift |
Updated•6 months ago
|
Comment 20•6 months ago
|
||
Comment on attachment 9417905 [details]
Bug 1911237 - Disable SurfaceDescriptorD3D10 fast path of CanvasRenderingContext2D::DrawImage() with remote Canvas2d
Approved for 129.0.2
Comment 21•6 months ago
|
||
uplift |
Updated•6 months ago
|
Description
•