Bug 1911237 - Disable  SurfaceDescriptorD3D10 fast path of CanvasRenderingContext2D::DrawImage() with remote Canvas2d r=gfx-reviewers,lsalzman

STR of Bug 1911237 caused different flickering on different GPUs.  It is better to disable the SurfaceDescriptorD3D10  video rendering optimization of CanvasRenderingContext2D::DrawImage() for now. Though it causes huge performance regression.

Differential Revision: https://phabricator.services.mozilla.com/D218631