dom/canvas/CanvasRenderingContext2D.cpp
@@ -5459,7 +5459,8 @@ MaybeGetSurfaceDescriptorForRemoteCanvas(
       return sd;
     }
     if (subdescType ==
-        layers::RemoteDecoderVideoSubDescriptor::TSurfaceDescriptorD3D10) {
+            layers::RemoteDecoderVideoSubDescriptor::TSurfaceDescriptorD3D10 &&
+        StaticPrefs::gfx_canvas_remote_use_draw_image_fast_path_d3d()) {
       auto& descD3D10 = subdesc.get_SurfaceDescriptorD3D10();
       if (descD3D10.gpuProcessQueryId().isSome() &&
           descD3D10.gpuProcessQueryId().ref().mOnlyForOverlay) {
